--- a/N2.html
+++ b/N2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <header class="header">
-            <a href="Index.html"><img class="logo" src="Logo/logotipo_3.png" alt=""></img></a>
+            <a href="index.html"><img class="logo" src="Logo/logotipo_3.png" alt=""></img></a>
 
 
                 <menu>
@@ -19,8 +19,8 @@
                             <div id="navdesktop">
                                 <ul class="lista">
                                     <li class="homepage">
-                                        <span class="icon"><a href="Index.html"><i class="bi bi-house-door"></i></a></span>
-                                        <span class="txt"><a href="Index.html">Homepage</a></span>
+                                        <span class="icon"><a href="index.html"><i class="bi bi-house-door"></i></a></span>
+                                        <span class="txt"><a href="index.html">Homepage</a></span>
                                     </li>
                                     <li class="novidades">
                                         <span class="icon"><i class="bi bi-newspaper"></i></span>
@@ -49,7 +49,7 @@
                                     <ul class="lista">
                                         <li>
                                             <span class="icon"><i class="bi bi-house-door"></i></span>
-                                            <span class="txt"><a href="Index.html">Homepage</a></span>
+                                            <span class="txt"><a href="index.html">Homepage</a></span>
                                         </li>
                                         <li>
                                             <span class="icon"><i class="bi bi-newspaper"></i></span>
