--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
                     </ol>
                     </div>
            
-                <div class="item"><a href="N3.html"><figure><<img src="imgsn/a.jpg" alt="Jornal da decada de 90"></figure><h1>Os melhores jornais de todos os tempos!</h1></a></div>
-                <div class="item"><a href="N2.html"><figure><img src="imgsn/aa.jpg" alt="Os melhores filmes para assistir"></figure><h1>Os 5 melhores filmes para assistir no tempo livre!</h1></a></div>
-                <div class="item"><figure><img src="imgsn/aaa.png" alt="Melhores app para exportação"></figure><h1>Melhores apps para exportar conteúdos para pdf!</h1></div>
-                <div class="item"><figure><img src="imgsn/aaaa.png" alt="Novo Applewatch"></figure><h1>Novo AppWatch vai ser realmente bom?</h1></div>
-                <div class="item2"><figure><img src="imgsn/b.png" alt="Livros para ler"></figure><h1>Os 5 melhores livros para ler no tempo livre!</h1></div>
-                <div class="item"><figure><img src="imgsn/bb.png" alt="Remessa conforme"></figure><h1>Remessa conforme, e sua controversia</h1></div>
-                <div class="item"><figure><img src="imgsn/bbb.png" alt=Maior iceberg do mundo""></figure><h1>Maior iceberg do mundo e sua ameaça a Antártida</h1></div>
-                <div class="item item3"><figure><img src="imgsn/bbbb.png" alt="Black friday na magalu"></figure><h1>Black Friday na magalu, veja alguns preços!</h1></div>
+                <div><a href="N3.html"><figure class="item"><<img src="imgsn/a.jpg" alt="Jornal da decada de 90"></figure><h1>Os melhores jornais de todos os tempos!</h1></a></div>
+                <div><a href="N2.html"><figure class="item"><img src="imgsn/aa.jpg" alt="Os melhores filmes para assistir"></figure><h1>Os 5 melhores filmes para assistir no tempo livre!</h1></a></div>
+                <div><figure class="item"><img src="imgsn/aaa.png" alt="Melhores app para exportação"></figure><h1>Melhores apps para exportar conteúdos para pdf!</h1></div>
+                <div><figure class="item"><img src="imgsn/aaaa.png" alt="Novo Applewatch"></figure><h1>Novo AppWatch vai ser realmente bom?</h1></div>
+                <div><figure class="item2"><img src="imgsn/b.png" alt="Livros para ler"></figure><h1>Os 5 melhores livros para ler no tempo livre!</h1></div>
+                <div><figure class="item"><img src="imgsn/bb.png" alt="Remessa conforme"></figure><h1>Remessa conforme, e sua controversia</h1></div>
+                <div><figure class="item"><img src="imgsn/bbb.png" alt=Maior iceberg do mundo""></figure><h1>Maior iceberg do mundo e sua ameaça a Antártida</h1></div>
+                <div><figure class="item item3"><img src="imgsn/bbbb.png" alt="Black friday na magalu"></figure><h1>Black Friday na magalu, veja alguns preços!</h1></div>
 
             </section>
         </main>
