--- a/N4.html
+++ b/N4.html
@@ -21,8 +21,8 @@
                             <div id="navdesktop">
                                 <ul class="lista">
                                     <li class="menuitens">
-                                        <span class="icon"><a href="Index.html"><i class="bi bi-house-door"></a></i></span>
-                                        <span class="txt"><a href="Index.html">Homepage</a></span>
+                                        <span class="icon"><a href="index.html"><i class="bi bi-house-door"></a></i></span>
+                                        <span class="txt"><a href="index.html">Homepage</a></span>
                                     </li>
                                     <li class="menuitens">
                                         <span class="icon"><a href="N5.html"><i class="bi bi-newspaper"></a></i></span>
@@ -49,8 +49,8 @@
             <nav id="navmobile">
                     <ul class="lista">
                         <li class="menuitens">
-                            <span class="icon"><a href="Index.html"><i class="bi bi-house-door"></i></a></span>
-                            <span class="txt"><a href="Index.html">Homepage</a></span>
+                            <span class="icon"><a href="index.html"><i class="bi bi-house-door"></i></a></span>
+                            <span class="txt"><a href="index.html">Homepage</a></span>
                         </li>
                         <li class="menuitens">
                             <span class="icon"><i class="bi bi-newspaper"></i></span>
