--- a/N2.html
+++ b/N2.html
@@ -19,8 +19,8 @@
                             <div id="navdesktop">
                                 <ul class="lista">
                                     <li class="menuitens">
-                                        <span class="icon"><a href="Index.html"><i class="bi bi-house-door"></a></i></span>
-                                        <span class="txt"><a href="Index.html">Homepage</a></span>
+                                        <span class="icon"><a href="index.html"><i class="bi bi-house-door"></a></i></span>
+                                        <span class="txt"><a href="index.html">Homepage</a></span>
                                     </li>
                                     <li class="menuitens">
                                         <span class="icon"><a href="N5.html"><i class="bi bi-newspaper"></a></i></span>
@@ -48,11 +48,11 @@
                             <nav id="navmobile">
                                     <ul class="lista">
                                         <li class="menuitens">
-                                            <span class="icon"><Index class="html"><i class="bi bi-house-door"></Index></i></span>
-                                            <span class="txt"><Index class="html">Homepage</Index></span>
+                                            <span class="icon"><a href="index.html"><i class="bi bi-house-door"></a></i></span>
+                                            <span class="txt"><a href="index.html">Homepage</a></span>
                                         </li>
                                         <li class="menuitens">
-                                            <span class="icon"><i class="bi bi-newspaper"></i></span>
+                                            <span class="icon"><a href="N4.html"><i class="bi bi-newspaper"></i></a></span>
                                             <span class="txt">Novidades</span>
                                         </li>
                                         <li class="menuitens">
