--- a/N5.html
+++ b/N5.html
@@ -69,10 +69,10 @@
                                 <section>
                                     <h1 class="h1">Novidades</h1>
                                         <ul class="p">
-                                            <li>Novo Artigo Adicinado, Os melhores jornais de todos os tempos!</li>      
-                                            <li>Novo Artigo Adicinado, Melhores filmes para ver no tempo livre!</li> 
-                                            <li>Novo Artigo Adicinado, Melhores apps para exportar conteudos para pdf!</li> 
-                                            <li>Novo Artigo Adicinado, Novo AppleWatch vai ser bom</li> 
+                                            <li>Novo Artigo Adicionado, Os melhores jornais de todos os tempos!</li>      
+                                            <li>Novo Artigo Adicionado, Melhores filmes para ver no tempo livre!</li> 
+                                            <li>Novo Artigo Adicionado, Melhores apps para exportar conteudos para pdf!</li> 
+                                            <li>Novo Artigo Adicionado, Novo AppleWatch vai ser bom</li> 
                                             <li>Página sobre nós adicionada.</li>                                       
                                         </ul>
                                 </section>
