--- a/N4.html
+++ b/N4.html
@@ -53,8 +53,8 @@
                             <span class="txt"><a href="index.html">Homepage</a></span>
                         </li>
                         <li class="menuitens">
-                            <span class="icon"><i class="bi bi-newspaper"></i></span>
-                            <span class="txt">Novidades</span>
+                            <span class="icon"><a href="N5.html"><i class="bi bi-newspaper"></i></a></span>
+                            <span class="txt"><a href="N5.html">Novidades</a></span>
                         </li>
                         <li class="menuitens">
                             <span class="icon"><i class="bi bi-question-circle"></i></span>
