--- a/N4.html
+++ b/N4.html
@@ -25,7 +25,7 @@
                                         <span class="txt"><a href="index.html">Homepage</a></span>
                                     </li>
                                     <li class="menuitens">
-                                        <span class="icon"><a href="N5.html"><i class="bi bi-newspaper"></a></i></span>
+                                        <span class="icon"><a href="N5.html"><i class="bi bi-newspaper"></i></a></span>
                                         <span class="txt"><a href="N5.html">Novidades</a></span>
                                     </li>
                                     <li class="menuitens">
