--- a/N3.html
+++ b/N3.html
@@ -19,7 +19,7 @@
                             <div id="navdesktop">
                                 <ul class="lista">
                                     <li class="menuitens">
-                                        <span class="icon"><a href="index.html"><i class="bi bi-house-door"></a></i></span>
+                                        <span class="icon"><a href="index.html"><i class="bi bi-house-door"></i></a></span>
                                         <span class="txt"><a href="index.html">Homepage</a></span>
                                     </li>
                                     <li class="menuitens">
