--- a/N2.html
+++ b/N2.html
@@ -19,11 +19,11 @@
                             <div id="navdesktop">
                                 <ul class="lista">
                                     <li class="menuitens">
-                                        <span class="icon"><a href="index.html"><i class="bi bi-house-door"></a></i></span>
+                                        <span class="icon"><a href="index.html"><i class="bi bi-house-door"></i></a></span>
                                         <span class="txt"><a href="index.html">Homepage</a></span>
                                     </li>
                                     <li class="menuitens">
-                                        <span class="icon"><a href="N5.html"><i class="bi bi-newspaper"></a></i></span>
+                                        <span class="icon"><a href="N5.html"><i class="bi bi-newspaper"></i></a></span>
                                         <span class="txt"><a href="N5.html">Novidades</a></span>
                                     </li>
                                     <li class="menuitens">
