--- a/N2.html
+++ b/N2.html
@@ -48,7 +48,7 @@
                             <nav id="navmobile">
                                     <ul class="lista">
                                         <li class="menuitens">
-                                            <span class="icon"><a href="index.html"><i class="bi bi-house-door"></a></i></span>
+                                            <span class="icon"><a href="index.html"><i class="bi bi-house-door"></i></a></span>
                                             <span class="txt"><a href="index.html">Homepage</a></span>
                                         </li>
                                         <li class="menuitens">
@@ -56,7 +56,7 @@
                                             <span class="txt"><a href="N5.html">Novidades</a></span>
                                         </li>
                                         <li class="menuitens">
-                                            <span class="icon"><a href="N4.html"><i class="bi bi-question-circle"></a></i></span>
+                                            <span class="icon"><a href="N4.html"><i class="bi bi-question-circle"></i></a></span>
                                             <span class="txt"><a href="N4.html">Sobre nós</a></span>
                                         </li>
                                     </ul>
@@ -118,21 +118,7 @@
                                 </div>
                             </div>
                         </aside>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                                
+ 
             <footer>
                 <div id="footer">
                     <h3>Política de Privacidade</h3>
