--- a/N3.html
+++ b/N3.html
@@ -56,7 +56,7 @@
                                             <span class="txt"><a href="N5.html">Novidades</a></span>
                                         </li>
                                         <li class="menuitens">
-                                            <span class="icon"><a href="N4.html"><i class="bi bi-question-circle"></a></i></span>
+                                            <span class="icon"><a href="N4.html"><i class="bi bi-question-circle"></i></a></span>
                                             <span class="txt"><a href="N4.html">Sobre nós</a></span>
                                         </li>
                                     </ul>
