--- a/N3.html
+++ b/N3.html
@@ -48,7 +48,7 @@
                             <nav id="navmobile">
                                     <ul class="lista">
                                         <li class="menuitens">
-                                            <span class="icon"><a href="index.html"><i class="bi bi-house-door"></a></i></span>
+                                            <span class="icon"><a href="index.html"><i class="bi bi-house-door"></i></a></span>
                                             <span class="txt"><a href="index.html">Homepage</a></span>
                                         </li>
                                         <li class="menuitens">
@@ -113,19 +113,6 @@
                         </aside>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-                                
             <footer>
                 <div id="footer">
                     <h3>Política de Privacidade</h3>
