--- a/N4.html
+++ b/N4.html
@@ -12,7 +12,7 @@
 <body>
     
     <header class="header">
-            <a href="Index.html"><img class="logo" src="Logo/logotipo_3.png" alt=""></a>
+            <a href="Index.html"><img class="logo" src="Logo/logotipo_3.png" alt="Infopontonews"></a>
 
 
                 <menu>
@@ -21,7 +21,7 @@
                             <div id="navdesktop">
                                 <ul class="lista">
                                     <li class="menuitens">
-                                        <span class="icon"><a href="index.html"><i class="bi bi-house-door"></a></i></span>
+                                        <span class="icon"><a href="index.html"><i class="bi bi-house-door"></i></a></span>
                                         <span class="txt"><a href="index.html">Homepage</a></span>
                                     </li>
                                     <li class="menuitens">
