--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                             <div id="navdesktop">
                                 <ul class="lista">
                                     <li class="menuitens">
-                                        <span class="icon"><i class="bi bi-house-door"></i></span>
-                                        <span class="txt">Homepage</span>
+                                        <span class="icon"><a href="index.html"><i class="bi bi-house-door"></a></i></span>
+                                        <span class="txt"><a href="index.html">Homepage</a></span>
                                     </li>
                                     <li class="menuitens">
                                         <span class="icon"><a href="N5.html"><i class="bi bi-newspaper"></a></i></span>
                                         <span class="txt"><a href="N5.html">Novidades</a></span>
                                     </li>
                                     <li class="menuitens">
-                                        <span class="icon"><a href="N4.html"><i class="bi bi-question-circle"></i></a></span>
+                                        <span class="icon"><a href="N4.html"><i class="bi bi-question-circle"></a></i></span>
                                         <span class="txt"><a href="N4.html">Sobre nós</a></span>
                                     </li>
                                 </ul>
