--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
         <menu>
             <nav id="navmobile">
                     <ul class="lista">
-                        <li class="menuitens">
-                            <span class="icon"><i class="bi bi-house-door"></i></span>
-                            <span class="txt">Homepage</span>
-                        </li>
-                        <li class="menuitens">
-                            <span class="icon"><i class="bi bi-newspaper"></i></span>
-                            <span class="txt">Novidades</span>
-                        </li>
-                        <li class="menuitens">
-                            <span class="icon"><a href="N4.html"><i class="bi bi-question-circle"></i></a></span>
-                            <span class="txt"><a href="N4.html">Sobre nós</a></span>
-                        </li>
+                            <li class="menuitens">
+                                <span class="icon"><a href="index.html"><i class="bi bi-house-door"></i></a></span>
+                                <span class="txt"><a href="index.html">Homepage</a></span>
+                                </li>
+                            <li class="menuitens">
+                                <span class="icon"><a href="N5.html"><i class="bi bi-newspaper"></i></a></span>
+                                <span class="txt"><a href="N5.html">Novidades</a></span>
+                            </li>
+                            <li class="menuitens">
+                                 <span class="icon"><a href="N4.html"><i class="bi bi-question-circle"></i></a></span>
+                                 <span class="txt"><a href="N4.html">Sobre nós</a></span>
+                            </li>
                     </ul>
             </nav>
         </menu>
